--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,13 @@ dependencies {
     // Use the Kotlin JDK 8 standard library
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
+    // Use assertj
+    testCompile "org.assertj:assertj-core:3.11.1"
+
     // Use the Kotlin test library
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
     // Use the Kotlin JUnit integration
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+
 }
